Added function for load and cached svg sprite

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <div id="root"></div>
+    <script type="text/javascript" src="static/injectSprite.js"></script>
 </body>
 </html>
